--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
     <title> Amirah Ibrahim</title>
-    <link rel="icon" type="image/x-icon" href="images/AI.png">
+    <link rel="icon" type="image/x-icon" href="images/amirah-bitmoji.png">
     <!-- <meta name="This is Amirah Ibrahim's Personal website. Contents on this website pertains
         to Amirah's coding projects, education, etc. "  -->
         <!-- content="My website"> -->
