--- a/about.html
+++ b/about.html
@@ -22,12 +22,12 @@
  <body>
     <div class = "aboutMe">
         <div class = "navBar">
-              <a href="about.html" class="nav-item">ABOUT ME</a>
-               <a href="education.html" class="nav-item">EDUCATION</a>
-               <a href="index.html" class="nav-item" id = "navName">AMIRAH IBRAHIM</a>
-               <a href="projects.html" class="nav-item">PROJECTS</a>
-               <a href="community.html" class="nav-item">COMMUNITY</a>
-        </div>
+            <a href="#about-section" class="nav-item">ABOUT ME</a>
+             <a href="#education-section" class="nav-item">EDUCATION</a>
+             <a href="index.html" class="nav-item" id = "navName">AMIRAH IBRAHIM</a>
+             <a href="#proj-section" class="nav-item">EXPERIENCE</a>
+             <a href="contact.html" class="nav-item">CONTACT ME</a>
+      </div>
         </div>
         
     
