--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
         <br>
         <ul>
             <span class="first-color">public</span>
-            <span class="fifth-color">Amirah</span>
-         <span class="second-color">() {</span>
+            <span class="fifth-color">Amirah</span><span class="second-color">() {</span>
             <br>
             <ul>
                  <span class="third-color">String</span>
@@ -121,8 +120,7 @@
             <br>
             <span class="first-color">public static</span>
             <span class="third-color">void</span>
-            <span class="fifth-color">contact</span>
-         <span class="second-color">() {</span>
+            <span class="fifth-color">contact</span><span class="second-color">() {</span>
                  <ul>
                      <span class="third-color">Email</span>
                     <span class="second-color">email = </span>
