--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                 <span class="third-color">Resume</span>
                 <span class="second-color">myResume = </span>
                 <span class="first-color">new</span>
+                <!-- new resume -->
                 <span class="second-color">Resume(</span><span ><a href="resume/amirah-resume.pdf" class="fourth-color">"My Resume"</a></span><span class="second-color">)</span><span class="second-color">;</span>
                 <br>
                 
